Added ability to deposit multiple zipped KO at once by supplying an array in the request body eg: {"ko": ["file:///Kgrid/kgrid-shelf/src/test/resources/fixtures/hello-world.zip", "https://github.com/kgrid-objects/ipp-collection/releases/download/1.2.0/ipp-bgabsriskexec.zip"]} This will return an array of ark ids